--- a/firebase/public/style.css
+++ b/firebase/public/style.css
@@ -33,3 +33,8 @@ header {
 	box-shadow: 0px 3px 3px -1px rgba(0,0,0,0.75);
 	background-color: #efebe9;
 }
+footer {
+	text-align: center;
+	font-size: 1em;
+	padding: 15px;
+}
